Client: Fix table right-align headers to be center-aligned instead of left-aligned

--- a/client/src/app/modules/shared-module/table-component/table.component.scss
+++ b/client/src/app/modules/shared-module/table-component/table.component.scss
@@ -42,8 +42,9 @@ mat-cell {
 	text-align: right;
 	width: 100%;
 }
-.rightAlignHeader {
-	text-align: center;
+.rightAlignHeader ::ng-deep > div {
+	width: 100%;
+	justify-content: center;
 }
 
 // Icons
